utc-infrastructure/modules/security_groups/main.tf
locals {
  name = "${var.project}-${var.env}"
}

# ALB Security Group
resource "aws_security_group" "alb_sg" {
  name        = "${local.name}-alb-sg"
  description = "Security group for ALB"
  vpc_id      = var.vpc_id

  ingress {
    description      = "Allow HTTP from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    ingress {
    description      = "Allow HTTPS from anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    tags = { 
        Name = "${local.name}-alb-sg"
    }
}

#Bastion Security Group
resource "aws_security_group" "bastion_sg" {
  name        = "${local.name}-bastion-sg"
  description = "Security group for Bastion Host"
  vpc_id      = var.vpc_id 

  ingress {
    description      = "Allow SSH from my IP"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [var.my_ip]
    }

    egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    }

    tags = { 
        Name = "${local.name}-bastion-sg"
    }
}  

# App Server Security Group
resource "aws_security_group" "app_sg" {
  name        = "${local.name}-app-sg"
  description = "Security group for App Servers"
  vpc_id      = var.vpc_id  

  ingress {
    description      = "Allow HTTP from ALB SG"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    security_groups  = [aws_security_group.alb_sg.id]
    }

    ingress {
    description      = "Allow HTTPS from ALB SG"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    security_groups  = [aws_security_group.alb_sg.id]
    }

    ingress {
    description      = "Allow SSH from Bastion SG"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    security_groups  = [aws_security_group.bastion_sg.id]
    }

    egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    }
    
    tags = { 
        Name = "${local.name}-app-sg"
    }
}

#-- DB Server Security Group
resource "aws_security_group" "db_sg" {
  name        = "${local.name}-db-sg"
  description = "Security group for DB Servers"
  vpc_id      = var.vpc_id  

  ingress {
    description      = "Allow MySQL from App SG"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    security_groups  = [aws_security_group.app_sg.id]
    }

    egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    }  

    tags = { 
        Name = "${local.name}-db-sg"
    }
}
